--- a/InvenTree/locale/tr/LC_MESSAGES/django.po
+++ b/InvenTree/locale/tr/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-17 12:37+0000\n"
-"PO-Revision-Date: 2021-06-17 18:03\n"
+"PO-Revision-Date: 2021-06-17 19:06\n"
 "Last-Translator: \n"
 "Language-Team: Turkish\n"
 "Language: tr_TR\n"
@@ -23,7 +23,7 @@ msgstr "API uç noktası bulunamadı"
 
 #: InvenTree/api.py:110
 msgid "No action specified"
-msgstr "Eylem belirtilmedi"
+msgstr "İşlem belirtilmedi"
 
 #: InvenTree/api.py:124
 msgid "No matching action found"
@@ -957,15 +957,15 @@ msgstr "Bu yapım işi emri, %(link)s yapım iş emrinin altıdır"
 
 #: build/templates/build/build_base.html:32
 msgid "Build Order is ready to mark as completed"
-msgstr ""
+msgstr "Yapım işi tamamlandı olarak işaretlenmeye hazır"
 
 #: build/templates/build/build_base.html:37
 msgid "Build Order cannot be completed as outstanding outputs remain"
-msgstr ""
+msgstr "Bekleyen çıktılar kaldığı için yapım işi emri tamamlanamıyor"
 
 #: build/templates/build/build_base.html:42
 msgid "Required build quantity has not yet been completed"
-msgstr ""
+msgstr "Gerekli yapım işi miktarı henüz tamamlanmadı"
 
 #: build/templates/build/build_base.html:47
 msgid "Stock has not been fully allocated to this Build Order"
@@ -981,7 +981,7 @@ msgstr "Stok, yapım işi emri için tamamen tahsis edilemedi"
 #: stock/templates/stock/item_base.html:62
 #: stock/templates/stock/location.html:31
 msgid "Admin view"
-msgstr ""
+msgstr "Yönetici görünümü"
 
 #: build/templates/build/build_base.html:81
 #: build/templates/build/build_base.html:150
@@ -992,48 +992,48 @@ msgstr ""
 #: templates/js/table_filters.js:245 templates/js/table_filters.js:264
 #: templates/js/table_filters.js:281
 msgid "Overdue"
-msgstr ""
+msgstr "Vadesi geçmiş"
 
 #: build/templates/build/build_base.html:90
 msgid "Print actions"
-msgstr ""
+msgstr "Yazdırma işlemleri"
 
 #: build/templates/build/build_base.html:94
 msgid "Print Build Order"
-msgstr ""
+msgstr "Yapım İşi Emrini Yazdır"
 
 #: build/templates/build/build_base.html:100
 #: build/templates/build/build_base.html:225
 msgid "Complete Build"
-msgstr ""
+msgstr "Tamamlanmış Yapım İşi"
 
 #: build/templates/build/build_base.html:105
 msgid "Build actions"
-msgstr ""
+msgstr "Yapım İşi işlemleri"
 
 #: build/templates/build/build_base.html:109
 msgid "Edit Build"
-msgstr ""
+msgstr "Yapım İşini Düzenle"
 
 #: build/templates/build/build_base.html:111
 #: build/templates/build/build_base.html:209 build/views.py:57
 msgid "Cancel Build"
-msgstr ""
+msgstr "Yapım İşini İptal Et"
 
 #: build/templates/build/build_base.html:124
 #: build/templates/build/detail.html:11
 msgid "Build Details"
-msgstr ""
+msgstr "Yapım İşi Detayları"
 
 #: build/templates/build/build_base.html:150
 #, python-format
 msgid "This build was due on %(target)s"
-msgstr ""
+msgstr "Bu yapım işinin %(target)s tarihinde süresi doluyor"
 
 #: build/templates/build/build_base.html:157
 #: build/templates/build/detail.html:64
 msgid "Progress"
-msgstr ""
+msgstr "İlerleme"
 
 #: build/templates/build/build_base.html:170
 #: build/templates/build/detail.html:84 order/models.py:715
@@ -1045,62 +1045,62 @@ msgstr ""
 #: report/templates/report/inventree_so_report.html:77
 #: stock/templates/stock/item_base.html:279 templates/js/order.js:245
 msgid "Sales Order"
-msgstr ""
+msgstr "Sipariş Emri"
 
 #: build/templates/build/build_base.html:177
 #: build/templates/build/detail.html:98
 #: report/templates/report/inventree_build_order_base.html:153
 msgid "Issued By"
-msgstr ""
+msgstr "Veren"
 
 #: build/templates/build/build_base.html:217
 msgid "Incomplete Outputs"
-msgstr ""
+msgstr "Tamamlanmamış Çıktılar"
 
 #: build/templates/build/build_base.html:218
 msgid "Build Order cannot be completed as incomplete build outputs remain"
-msgstr ""
+msgstr "Tamamlanmamış yapım işi çıktıları kaldığı için yapım işi emri tamamlanamıyor"
 
 #: build/templates/build/build_children.html:10
 #: build/templates/build/navbar.html:36
 msgid "Child Build Orders"
-msgstr ""
+msgstr "Alt Yapım İşi Emrileri"
 
 #: build/templates/build/build_output.html:15
 msgid "Incomplete Build Outputs"
-msgstr ""
+msgstr "Tamamlanmamış Yapım İşi Çıktıları"
 
 #: build/templates/build/build_output.html:22
 msgid "Create new build output"
-msgstr ""
+msgstr "Yeni yapım işi çıktısı oluştur"
 
 #: build/templates/build/build_output.html:23
 msgid "Create New Output"
-msgstr ""
+msgstr "Yeni Çıktı Oluştur"
 
 #: build/templates/build/build_output.html:36
 msgid "Create a new build output"
-msgstr ""
+msgstr "Yeni bir yapım işi çıktısı oluştur"
 
 #: build/templates/build/build_output.html:37
 msgid "No incomplete build outputs remain."
-msgstr ""
+msgstr "Tamamlanmamış yapım işi çıktısı kalmadı."
 
 #: build/templates/build/build_output.html:38
 msgid "Create a new build output using the button above"
-msgstr ""
+msgstr "Yukarıdaki düğmeyi kullanarak yeni bir yapım işi çıktısı oluştur"
 
 #: build/templates/build/build_output.html:49
 msgid "Completed Build Outputs"
-msgstr ""
+msgstr "Tamamlanmış Yapım İşi Çıktıları"
 
 #: build/templates/build/build_output_create.html:7
 msgid "The Bill of Materials contains trackable parts"
-msgstr ""
+msgstr "Bu Malzeme Listesi takip edilebilir parçalar içeriyor"
 
 #: build/templates/build/build_output_create.html:8
 msgid "Build outputs must be generated individually."
-msgstr ""
+msgstr "Yapım işi çıktıları ayrı ayrı oluşturulmalıdır."
 
 #: build/templates/build/build_output_create.html:9
 msgid "Multiple build outputs will be created based on the quantity specified."
@@ -1178,75 +1178,75 @@ msgstr ""
 
 #: build/templates/build/detail.html:35
 msgid "Stock Source"
-msgstr ""
+msgstr "Stok Kaynağı"
 
 #: build/templates/build/detail.html:40
 msgid "Stock can be taken from any available location."
-msgstr ""
+msgstr "Stok herhangi bir konumdan alınabilir."
 
 #: build/templates/build/detail.html:46 order/forms.py:85 order/models.py:678
 #: order/templates/order/purchase_order_detail.html:239
 #: order/templates/order/receive_parts.html:25 stock/forms.py:169
 #: stock/forms.py:375
 msgid "Destination"
-msgstr ""
+msgstr "Hedef"
 
 #: build/templates/build/detail.html:53
 msgid "Destination location not specified"
-msgstr ""
+msgstr "Hedef konumu belirtilmedi"
 
 #: build/templates/build/detail.html:70
 #: stock/templates/stock/item_base.html:303 templates/js/stock.js:634
 #: templates/js/stock.js:1381 templates/js/table_filters.js:112
 #: templates/js/table_filters.js:206
 msgid "Batch"
-msgstr ""
+msgstr "Toplu"
 
 #: build/templates/build/detail.html:116
 #: order/templates/order/order_base.html:111
 #: order/templates/order/sales_order_base.html:113 templates/js/build.js:788
 msgid "Created"
-msgstr ""
+msgstr "Oluşturuldu"
 
 #: build/templates/build/detail.html:127
 msgid "No target date set"
-msgstr ""
+msgstr "Hedef tarih ayarlanmadı"
 
 #: build/templates/build/detail.html:132 templates/js/build.js:766
 msgid "Completed"
-msgstr ""
+msgstr "Tamamlandı"
 
 #: build/templates/build/detail.html:136
 msgid "Build not complete"
-msgstr ""
+msgstr "Yapım İşi tamamlanmadı"
 
 #: build/templates/build/edit_build_item.html:7
 msgid "Alter the quantity of stock allocated to the build output"
-msgstr ""
+msgstr "Yapım işi çıktısına tahsis edilen stok miktarını değiştir"
 
 #: build/templates/build/index.html:28 build/views.py:678
 msgid "New Build Order"
-msgstr ""
+msgstr "Yeni Yapım İşi Emri"
 
 #: build/templates/build/index.html:37 build/templates/build/index.html:38
 msgid "Print Build Orders"
-msgstr ""
+msgstr "Yapım İşi Emirlerini Yazdır"
 
 #: build/templates/build/index.html:43
 #: order/templates/order/purchase_orders.html:27
 #: order/templates/order/sales_orders.html:27
 msgid "Display calendar view"
-msgstr ""
+msgstr "Takvim görünümünü görüntüle"
 
 #: build/templates/build/index.html:46
 #: order/templates/order/purchase_orders.html:30
 #: order/templates/order/sales_orders.html:30
 msgid "Display list view"
-msgstr ""
+msgstr "Liste görünümünü görüntüle"
 
 #: build/templates/build/navbar.html:12
 msgid "Build Order Details"
-msgstr ""
+msgstr "Yapım İşi Emri Detayları"
 
 #: build/templates/build/navbar.html:15
 #: company/templates/company/navbar.html:15
@@ -1254,35 +1254,35 @@ msgstr ""
 #: order/templates/order/so_navbar.html:15 part/templates/part/navbar.html:15
 #: templates/js/stock.js:1019
 msgid "Details"
-msgstr ""
+msgstr "Detaylar"
 
 #: build/templates/build/navbar.html:21 build/templates/build/navbar.html:24
 #: build/views.py:91
 msgid "Allocate Stock"
-msgstr ""
+msgstr "Stok Tahsis Et"
 
 #: build/templates/build/navbar.html:29 build/templates/build/navbar.html:32
 msgid "Build Outputs"
-msgstr ""
+msgstr "Yapım İşi Çıktıları"
 
 #: build/templates/build/navbar.html:39
 msgid "Child Builds"
-msgstr ""
+msgstr "Alt Yapım İşleri"
 
 #: build/templates/build/navbar.html:50
 msgid "Build Order Notes"
-msgstr ""
+msgstr "Yapım İşi Emri Notları"
 
 #: build/templates/build/notes.html:12
 msgid "Build Notes"
-msgstr ""
+msgstr "Yapım İşi Notları"
 
 #: build/templates/build/notes.html:14 company/templates/company/notes.html:13
 #: order/templates/order/order_notes.html:15
 #: order/templates/order/sales_order_notes.html:16
 #: part/templates/part/notes.html:14 stock/templates/stock/item_notes.html:15
 msgid "Edit notes"
-msgstr ""
+msgstr "Notları Düzenle"
 
 #: build/templates/build/notes.html:26 company/templates/company/notes.html:24
 #: order/templates/order/order_notes.html:27
@@ -1291,7 +1291,7 @@ msgstr ""
 #: stock/templates/stock/item_base.html:492
 #: stock/templates/stock/item_notes.html:26
 msgid "Save"
-msgstr ""
+msgstr "Kaydet"
 
 #: build/templates/build/unallocate.html:10
 msgid "Are you sure you wish to unallocate all stock for this build?"
@@ -1299,55 +1299,55 @@ msgstr "Bu yapım işi için tahsis edilen tüm stokları kaldırmak istediğini
 
 #: build/templates/build/unallocate.html:12
 msgid "All incomplete stock allocations will be removed from the build"
-msgstr ""
+msgstr "Tüm eksik stok tahsisleri yapım işinden kaldırılacak"
 
 #: build/views.py:77
 msgid "Build was cancelled"
-msgstr ""
+msgstr "Yapım işi iptal edildi"
 
 #: build/views.py:138
 msgid "Allocated stock to build output"
-msgstr ""
+msgstr "Yapım işi çıktısına stok tahsis edildi"
 
 #: build/views.py:150
 msgid "Create Build Output"
-msgstr ""
+msgstr "Yapım İşi Çıktısı Oluştur"
 
 #: build/views.py:168
 msgid "Maximum output quantity is "
-msgstr ""
+msgstr "Maksimum çıktı miktarı "
 
 #: build/views.py:184 stock/views.py:1821
 msgid "Serial numbers already exist"
-msgstr ""
+msgstr "Seri numaraları zaten mevcut"
 
 #: build/views.py:193
 msgid "Serial numbers required for trackable build output"
-msgstr ""
+msgstr "Seri numaraları takip edilebilir yapım işi çıktıları için gerekli"
 
 #: build/views.py:259
 msgid "Delete Build Output"
-msgstr ""
+msgstr "Yapım İşi Çıktısı Sil"
 
 #: build/views.py:280 build/views.py:370
 msgid "Confirm unallocation of build stock"
-msgstr ""
+msgstr "Yapım işi stoku tahsisinin iptalini onayla"
 
 #: build/views.py:281 build/views.py:371 stock/views.py:425
 msgid "Check the confirmation box"
-msgstr ""
+msgstr "Onay kutusunu işaretleyin"
 
 #: build/views.py:293
 msgid "Build output does not match build"
-msgstr ""
+msgstr "Yapım işi çıktısı yapım işi ile eşleşmiyor"
 
 #: build/views.py:295 build/views.py:496
 msgid "Build output must be specified"
-msgstr ""
+msgstr "Yapım işi çıktısı belirtilmeli"
 
 #: build/views.py:307
 msgid "Build output deleted"
-msgstr ""
+msgstr "Yapım işi çıktısı silindi"
 
 #: build/views.py:405
 msgid "Complete Build Order"
@@ -3286,7 +3286,7 @@ msgstr ""
 #: order/templates/order/sales_order_detail.html:95 templates/js/bom.js:365
 #: templates/js/build.js:637 templates/js/build.js:1054
 msgid "Actions"
-msgstr ""
+msgstr "İşlemler"
 
 #: order/templates/order/sales_order_detail.html:102 templates/js/build.js:525
 #: templates/js/build.js:859
@@ -3379,7 +3379,7 @@ msgstr "Seri numarası ile stok kalemlerini tahsis et"
 
 #: order/templates/order/so_allocation_delete.html:7
 msgid "This action will unallocate the following stock from the Sales Order"
-msgstr ""
+msgstr "Bu işlem Sipariş Emrinden belirtilen stok kalemleri tahsis edemedi"
 
 #: order/templates/order/so_attachments.html:12
 #: order/templates/order/so_navbar.html:26
@@ -4692,7 +4692,7 @@ msgstr ""
 #: stock/templates/stock/item_base.html:75
 #: stock/templates/stock/location.html:51
 msgid "Barcode actions"
-msgstr ""
+msgstr "Barkod işlemleri"
 
 #: part/templates/part/part_base.html:42
 #: stock/templates/stock/item_base.html:77
@@ -4716,7 +4716,7 @@ msgstr ""
 
 #: part/templates/part/part_base.html:67
 msgid "Part actions"
-msgstr ""
+msgstr "Parça işlemleri"
 
 #: part/templates/part/part_base.html:70
 msgid "Duplicate part"
@@ -5243,7 +5243,7 @@ msgstr ""
 
 #: stock/forms.py:173 stock/forms.py:349
 msgid "Add transaction note (optional)"
-msgstr ""
+msgstr "İşlem notu ekle (isteğe bağlı)"
 
 #: stock/forms.py:203 stock/forms.py:259
 msgid "Select test report template"
@@ -5527,7 +5527,7 @@ msgstr ""
 
 #: stock/templates/stock/item_base.html:91
 msgid "Printing actions"
-msgstr ""
+msgstr "Yazdırma işlemleri"
 
 #: stock/templates/stock/item_base.html:95
 #: stock/templates/stock/item_tests.html:27
@@ -5536,7 +5536,7 @@ msgstr ""
 
 #: stock/templates/stock/item_base.html:104
 msgid "Stock adjustment actions"
-msgstr ""
+msgstr "Stok ayarlama işlemleri"
 
 #: stock/templates/stock/item_base.html:108
 #: stock/templates/stock/location.html:65 templates/stock_table.html:57
@@ -5578,7 +5578,7 @@ msgstr ""
 #: stock/templates/stock/item_base.html:140
 #: stock/templates/stock/location.html:62
 msgid "Stock actions"
-msgstr ""
+msgstr "Stok işlemleri"
 
 #: stock/templates/stock/item_base.html:143
 msgid "Convert to variant"
@@ -5745,7 +5745,7 @@ msgstr ""
 
 #: stock/templates/stock/location.html:71
 msgid "Location actions"
-msgstr ""
+msgstr "Konum işlemleri"
 
 #: stock/templates/stock/location.html:73
 msgid "Edit location"
@@ -5838,7 +5838,7 @@ msgstr "Bu işlem kolayca geri alınamaz"
 
 #: stock/templates/stock/sublocation.html:23 templates/stock_table.html:37
 msgid "Printing Actions"
-msgstr ""
+msgstr "Yazdırma İşlemleri"
 
 #: stock/templates/stock/sublocation.html:27 templates/stock_table.html:41
 msgid "Print labels"
@@ -5988,7 +5988,7 @@ msgstr ""
 
 #: stock/views.py:1107
 msgid "No action performed"
-msgstr ""
+msgstr "Herhangi bir işlem gerçekleştirilmedi"
 
 #: stock/views.py:1122
 #, python-brace-format
@@ -7502,7 +7502,7 @@ msgstr ""
 
 #: templates/stock_table.html:27
 msgid "Barcode Actions"
-msgstr ""
+msgstr "Barkod İşlemleri"
 
 #: templates/stock_table.html:43
 msgid "Print test reports"
