--- a/InvenTree/locale/tr/LC_MESSAGES/django.po
+++ b/InvenTree/locale/tr/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-17 12:37+0000\n"
-"PO-Revision-Date: 2021-06-17 21:02\n"
+"PO-Revision-Date: 2021-06-17 22:01\n"
 "Last-Translator: \n"
 "Language-Team: Turkish\n"
 "Language: tr_TR\n"
@@ -896,7 +896,7 @@ msgstr "Gerekli parçaları sipariş edin"
 #: company/templates/company/detail_supplier_part.html:32 order/views.py:986
 #: part/templates/part/category.html:127
 msgid "Order Parts"
-msgstr "Sipariş Parçaları"
+msgstr "Parça Siparişi"
 
 #: build/templates/build/allocate.html:36
 msgid "Untracked stock has been fully allocated for this Build Order"
@@ -1424,7 +1424,7 @@ msgstr ""
 
 #: build/views.py:1037
 msgid "Edit Stock Allocation"
-msgstr ""
+msgstr "Stok Tahsisini Düzenle"
 
 #: build/views.py:1041
 msgid "Updated Build Item"
@@ -1538,27 +1538,27 @@ msgstr ""
 
 #: common/models.py:99
 msgid "IPN Regex"
-msgstr ""
+msgstr "DPN Regex"
 
 #: common/models.py:100
 msgid "Regular expression pattern for matching Part IPN"
-msgstr ""
+msgstr "Parça DPN eşleştirmesi için Düzenli İfade Kalıbı (Regex)"
 
 #: common/models.py:104
 msgid "Allow Duplicate IPN"
-msgstr ""
+msgstr "Yinelenen DPN'ye İzin Ver"
 
 #: common/models.py:105
 msgid "Allow multiple parts to share the same IPN"
-msgstr ""
+msgstr "Birden çok parçanın aynı DPN'yi paylaşmasına izin ver"
 
 #: common/models.py:111
 msgid "Allow Editing IPN"
-msgstr ""
+msgstr "DPN Düzenlemeye İzin Ver"
 
 #: common/models.py:112
 msgid "Allow changing the IPN value while editing a part"
-msgstr ""
+msgstr "Parçayı düzenlerken DPN değiştirmeye izin ver"
 
 #: common/models.py:118
 msgid "Copy Part BOM Data"
@@ -1737,7 +1737,7 @@ msgstr ""
 
 #: common/models.py:264
 msgid "Enable ownership control over stock locations and items"
-msgstr ""
+msgstr "Stok konumu ve öğeler üzerinde sahiplik kontrolünü etkinleştirin"
 
 #: common/models.py:270
 msgid "Group by Part"
@@ -2209,12 +2209,12 @@ msgstr ""
 #: company/templates/company/detail_manufacturer_part.html:36
 #: company/templates/company/detail_supplier_part.html:35
 msgid "Delete parts"
-msgstr ""
+msgstr "Parçaları sil"
 
 #: company/templates/company/detail_manufacturer_part.html:36
 #: company/templates/company/detail_supplier_part.html:35
 msgid "Delete Parts"
-msgstr ""
+msgstr "Parçaları Sil"
 
 #: company/templates/company/detail_manufacturer_part.html:66
 #: company/templates/company/detail_supplier_part.html:66
@@ -2479,7 +2479,7 @@ msgstr "Tedarikçi Parçası Emirleri"
 
 #: company/templates/company/supplier_part_navbar.html:26
 msgid "Supplier Part Pricing"
-msgstr "Tedarikçi Parça Fiyatlandırması"
+msgstr "Tedarikçi Parçası Fiyatlandırması"
 
 #: company/templates/company/supplier_part_navbar.html:29
 msgid "Pricing"
@@ -2628,19 +2628,19 @@ msgstr ""
 
 #: label/models.py:103
 msgid "Label name"
-msgstr ""
+msgstr "Etiket adı"
 
 #: label/models.py:110
 msgid "Label description"
-msgstr ""
+msgstr "Etiket tanımı"
 
 #: label/models.py:117 stock/forms.py:202
 msgid "Label"
-msgstr ""
+msgstr "Etiket"
 
 #: label/models.py:118
 msgid "Label template file"
-msgstr ""
+msgstr "Etiket şablon listesi"
 
 #: label/models.py:124 report/models.py:297
 msgid "Enabled"
@@ -2648,7 +2648,7 @@ msgstr ""
 
 #: label/models.py:125
 msgid "Label template is enabled"
-msgstr ""
+msgstr "Etiket sablonu etkinleştirildi"
 
 #: label/models.py:130
 msgid "Width [mm]"
@@ -2656,7 +2656,7 @@ msgstr ""
 
 #: label/models.py:131
 msgid "Label width, specified in mm"
-msgstr ""
+msgstr "Etiket genişliği mm olarak belirtilmeli"
 
 #: label/models.py:137
 msgid "Height [mm]"
@@ -2664,7 +2664,7 @@ msgstr ""
 
 #: label/models.py:138
 msgid "Label height, specified in mm"
-msgstr ""
+msgstr "Etiket yüksekliği mm olarak belirtilmeli"
 
 #: label/models.py:144 report/models.py:290
 msgid "Filename Pattern"
@@ -2702,7 +2702,7 @@ msgstr ""
 
 #: order/forms.py:86
 msgid "Receive parts to this location"
-msgstr ""
+msgstr "Parçaları bu konuma alın"
 
 #: order/forms.py:108
 msgid "Purchase Order reference"
@@ -2916,7 +2916,7 @@ msgstr ""
 
 #: order/models.py:811
 msgid "Allocation quantity cannot exceed stock quantity"
-msgstr ""
+msgstr "Tahsis miktarı stok miktarını aşamaz"
 
 #: order/models.py:821
 msgid "Quantity must be 1 for serialized stock item"
@@ -2936,7 +2936,7 @@ msgstr ""
 
 #: order/models.py:841
 msgid "Enter stock allocation quantity"
-msgstr ""
+msgstr "Stok tahsis miktarını girin"
 
 #: order/templates/order/delete_attachment.html:5
 #: stock/templates/stock/attachment_delete.html:5
@@ -2988,7 +2988,7 @@ msgstr ""
 #: stock/templates/stock/location.html:191 templates/js/stock.js:711
 #: templates/js/stock.js:1299
 msgid "New Location"
-msgstr ""
+msgstr "Yeni Konum"
 
 #: order/templates/order/order_base.html:181
 #: order/templates/order/purchase_order_detail.html:101
@@ -3224,7 +3224,7 @@ msgstr ""
 #: templates/navbar.html:23 templates/stats.html:80 templates/stats.html:89
 #: users/models.py:40
 msgid "Parts"
-msgstr ""
+msgstr "Parçalar"
 
 #: order/templates/order/receive_parts.html:15
 msgid "Select parts to receive against this order"
@@ -3291,12 +3291,12 @@ msgstr "İşlemler"
 #: order/templates/order/sales_order_detail.html:102 templates/js/build.js:525
 #: templates/js/build.js:859
 msgid "Edit stock allocation"
-msgstr ""
+msgstr "Stok tahsisini düzenle"
 
 #: order/templates/order/sales_order_detail.html:103 templates/js/build.js:527
 #: templates/js/build.js:860
 msgid "Delete stock allocation"
-msgstr ""
+msgstr "Stok tahsisini sil"
 
 #: order/templates/order/sales_order_detail.html:176
 msgid "No matching line items"
@@ -3359,7 +3359,7 @@ msgstr ""
 
 #: order/templates/order/sales_order_ship.html:12
 msgid "Ensure that the order allocation is correct before shipping the order."
-msgstr ""
+msgstr "Emri göndermeden önce emir tahsisinin doğru olduğundan emin olun."
 
 #: order/templates/order/sales_order_ship.html:18
 msgid "Some line items in this order have been over-allocated"
@@ -3545,11 +3545,11 @@ msgstr ""
 
 #: order/views.py:1759
 msgid "Edit Allocation Quantity"
-msgstr ""
+msgstr "Tahsis Miktarını Düzenle"
 
 #: order/views.py:1774
 msgid "Remove allocation"
-msgstr ""
+msgstr "Tahsisi Sil"
 
 #: order/views.py:1846
 msgid "Sales order not found"
@@ -3572,7 +3572,7 @@ msgstr ""
 #: part/bom.py:138 part/models.py:72 part/models.py:762
 #: part/templates/part/category.html:66 part/templates/part/detail.html:90
 msgid "Default Location"
-msgstr ""
+msgstr "Varsayılan Konum"
 
 #: part/bom.py:139 part/templates/part/part_base.html:124
 msgid "Available Stock"
@@ -3713,15 +3713,15 @@ msgstr ""
 
 #: part/forms.py:242
 msgid "Include parent categories parameter templates"
-msgstr ""
+msgstr "Üst kategorilerin parametre şablonlarını dahil et"
 
 #: part/forms.py:322
 msgid "Add parameter template to same level categories"
-msgstr ""
+msgstr "Parametre şablonunu aynı seviyedeki kategorilere ekle"
 
 #: part/forms.py:326
 msgid "Add parameter template to all categories"
-msgstr ""
+msgstr "Parametre şablonunu tüm kategorilere ekle"
 
 #: part/forms.py:344 part/models.py:2263
 msgid "Sub part"
@@ -3733,7 +3733,7 @@ msgstr ""
 
 #: part/models.py:73
 msgid "Default location for parts in this category"
-msgstr ""
+msgstr "Bu kategori içindeki parçalar için varsayılan konum"
 
 #: part/models.py:76
 msgid "Default keywords"
@@ -3752,7 +3752,7 @@ msgstr ""
 #: part/templates/part/category.html:94 templates/InvenTree/search.html:127
 #: templates/stats.html:84 users/models.py:39
 msgid "Part Categories"
-msgstr ""
+msgstr "Parça Kategorileri"
 
 #: part/models.py:446 part/models.py:458
 #, python-brace-format
@@ -3773,11 +3773,11 @@ msgstr ""
 
 #: part/models.py:643
 msgid "Duplicate IPN not allowed in part settings"
-msgstr ""
+msgstr "Yinelenen DPN'ye parça ayarlarında izin verilmiyor"
 
 #: part/models.py:654
 msgid "Part must be unique for name, IPN and revision"
-msgstr ""
+msgstr "Parça ad, DPN ve revizyon için benzersiz olmalıdır"
 
 #: part/models.py:685 part/templates/part/detail.html:22
 msgid "Part name"
@@ -3825,7 +3825,7 @@ msgstr ""
 #: part/templates/part/part_base.html:87 templates/js/part.js:169
 #: templates/js/part.js:296
 msgid "IPN"
-msgstr ""
+msgstr "DPN"
 
 #: part/models.py:731
 msgid "Internal Part Number"
@@ -3833,12 +3833,12 @@ msgstr ""
 
 #: part/models.py:737
 msgid "Part revision or version number"
-msgstr ""
+msgstr "Parça revizyon veya versiyon numarası"
 
 #: part/models.py:738 part/templates/part/detail.html:35 report/models.py:199
 #: templates/js/part.js:173
 msgid "Revision"
-msgstr ""
+msgstr "Revizyon"
 
 #: part/models.py:760
 msgid "Where is this item normally stored?"
@@ -4113,7 +4113,7 @@ msgstr ""
 
 #: part/templates/part/allocation.html:11
 msgid "Part Stock Allocations"
-msgstr ""
+msgstr "Parça Stok Tahsisleri"
 
 #: part/templates/part/attachments.html:10
 msgid "Part Attachments"
@@ -4287,7 +4287,7 @@ msgstr ""
 
 #: part/templates/part/category.html:50 part/templates/part/category.html:89
 msgid "Category Details"
-msgstr ""
+msgstr "Kategori Detayları"
 
 #: part/templates/part/category.html:55
 msgid "Category Path"
@@ -4302,11 +4302,11 @@ msgstr ""
 #: part/templates/part/category_navbar.html:18
 #: part/templates/part/subcategory.html:16
 msgid "Subcategories"
-msgstr ""
+msgstr "Alt kategoriler"
 
 #: part/templates/part/category.html:84
 msgid "Parts (Including subcategories)"
-msgstr ""
+msgstr "Parçalar (Alt kategoriler dahil)"
 
 #: part/templates/part/category.html:113
 msgid "Export Part Data"
@@ -4314,11 +4314,11 @@ msgstr ""
 
 #: part/templates/part/category.html:125
 msgid "Set category"
-msgstr ""
+msgstr "Kategori ayarla"
 
 #: part/templates/part/category.html:125
 msgid "Set Category"
-msgstr ""
+msgstr "Kategori Ayarla"
 
 #: part/templates/part/category.html:128
 msgid "Export Data"
@@ -4335,7 +4335,7 @@ msgstr ""
 #: part/templates/part/category.html:209
 #: stock/templates/stock/location.html:192 templates/js/stock.js:712
 msgid "Create new location"
-msgstr ""
+msgstr "Yeni konum oluştur"
 
 #: part/templates/part/category.html:214 part/templates/part/category.html:244
 msgid "New Category"
@@ -4360,11 +4360,11 @@ msgstr ""
 #: part/templates/part/category_delete.html:8
 #, python-format
 msgid "This category contains %(count)s child categories"
-msgstr ""
+msgstr "Bu kategori %(count)s alt kategori içermektedir"
 
 #: part/templates/part/category_delete.html:9
 msgid "If this category is deleted, these child categories will be moved to the"
-msgstr ""
+msgstr "Bu kategori silinirse, alt kategoriler taşınacaktır"
 
 #: part/templates/part/category_delete.html:11
 msgid "category"
@@ -4485,7 +4485,7 @@ msgstr ""
 
 #: part/templates/part/detail.html:203 part/templates/part/detail.html:205
 msgid "Part can be purchased from external suppliers"
-msgstr ""
+msgstr "Bu parça harici tedarikçilerden satın alınabilir"
 
 #: part/templates/part/detail.html:213
 msgid "Part can be sold to customers"
@@ -4530,7 +4530,7 @@ msgstr ""
 
 #: part/templates/part/navbar.html:43
 msgid "Allocations"
-msgstr ""
+msgstr "Tahsisler"
 
 #: part/templates/part/navbar.html:64 part/templates/part/navbar.html:67
 msgid "Used In"
@@ -4795,7 +4795,7 @@ msgstr ""
 #: part/templates/part/partial_delete.html:44
 #, python-format
 msgid "There are %(count)s suppliers defined for this part. If you delete this part, the following supplier parts will also be deleted:"
-msgstr ""
+msgstr "Bu parçası için tanımlanmış %(count)s tedarikçi bulunmaktadır. Bu parçayı silerseniz, aşağıdaki tedarikçi parçaları da silinecektir:"
 
 #: part/templates/part/partial_delete.html:55
 #, python-format
@@ -4820,7 +4820,7 @@ msgstr ""
 
 #: part/templates/part/set_category.html:9
 msgid "Set category for the following parts"
-msgstr ""
+msgstr "Aşağıdaki parçalara kategori ayarla"
 
 #: part/templates/part/stock.html:10
 msgid "Part Stock"
@@ -5096,7 +5096,7 @@ msgstr ""
 
 #: report/models.py:200
 msgid "Report revision number (auto-increments)"
-msgstr ""
+msgstr "Revizyon numarası raporla (otomatik artış)"
 
 #: report/models.py:291
 msgid "Pattern for generating report filenames"
@@ -5252,7 +5252,7 @@ msgstr ""
 #: stock/forms.py:267 templates/js/table_filters.js:75
 #: templates/js/table_filters.js:138
 msgid "Include sublocations"
-msgstr ""
+msgstr "Alt konumları dahil et"
 
 #: stock/forms.py:267
 msgid "Include stock items in sub locations"
@@ -5272,7 +5272,7 @@ msgstr ""
 
 #: stock/forms.py:347
 msgid "Destination location for uninstalled items"
-msgstr ""
+msgstr "Sökülen öğeler için hedef konum"
 
 #: stock/forms.py:351
 msgid "Confirm uninstall"
@@ -5300,11 +5300,11 @@ msgstr "Stok kalemlerinin hareketini onaylayın"
 
 #: stock/forms.py:383
 msgid "Set Default Location"
-msgstr ""
+msgstr "Varsayılan Konum Ayarla"
 
 #: stock/forms.py:383
 msgid "Set the destination as the default location for selected parts"
-msgstr ""
+msgstr "Hedefi seçili parçalar için varsayılan konum olarak ayarla"
 
 #: stock/models.py:56 stock/models.py:547
 msgid "Owner"
@@ -5357,7 +5357,7 @@ msgstr "Bu stok kalemi için tedarikçi parçası seçin"
 
 #: stock/models.py:422 stock/templates/stock/stock_app_base.html:8
 msgid "Stock Location"
-msgstr ""
+msgstr "Stok Konumu"
 
 #: stock/models.py:425
 msgid "Where is this stock item located?"
@@ -5523,7 +5523,7 @@ msgstr ""
 
 #: stock/templates/stock/item_base.html:84 templates/stock_table.html:31
 msgid "Scan to Location"
-msgstr ""
+msgstr "Konuma Tara"
 
 #: stock/templates/stock/item_base.html:91
 msgid "Printing actions"
@@ -5640,7 +5640,7 @@ msgstr ""
 
 #: stock/templates/stock/item_base.html:289 templates/js/build.js:508
 msgid "No location set"
-msgstr ""
+msgstr "Konum ayarlanmadı"
 
 #: stock/templates/stock/item_base.html:296
 msgid "Barcode Identifier"
@@ -5733,7 +5733,7 @@ msgstr ""
 
 #: stock/templates/stock/location.html:20
 msgid "You are not in the list of owners of this location. This stock location cannot be edited."
-msgstr ""
+msgstr "Bu konumun sahipleri listesinde değilsiniz. Bu stok konumu düzenlenemez."
 
 #: stock/templates/stock/location.html:37
 msgid "All stock items"
@@ -5749,30 +5749,30 @@ msgstr "Konum işlemleri"
 
 #: stock/templates/stock/location.html:73
 msgid "Edit location"
-msgstr ""
+msgstr "Konumu düzenle"
 
 #: stock/templates/stock/location.html:75
 msgid "Delete location"
-msgstr ""
+msgstr "Konumu sil"
 
 #: stock/templates/stock/location.html:87
 msgid "Location Details"
-msgstr ""
+msgstr "Konum Detayları"
 
 #: stock/templates/stock/location.html:92
 msgid "Location Path"
-msgstr ""
+msgstr "Konum Yolu"
 
 #: stock/templates/stock/location.html:97
 msgid "Location Description"
-msgstr ""
+msgstr "Konum Tanımı"
 
 #: stock/templates/stock/location.html:102
 #: stock/templates/stock/location_navbar.html:11
 #: stock/templates/stock/location_navbar.html:18
 #: stock/templates/stock/sublocation.html:16
 msgid "Sublocations"
-msgstr ""
+msgstr "Alt konumlar"
 
 #: stock/templates/stock/location.html:112
 msgid "Stock Details"
@@ -5781,11 +5781,11 @@ msgstr ""
 #: stock/templates/stock/location.html:117 templates/InvenTree/search.html:279
 #: templates/stats.html:97 users/models.py:41
 msgid "Stock Locations"
-msgstr ""
+msgstr "Stok Konumları"
 
 #: stock/templates/stock/location_delete.html:7
 msgid "Are you sure you want to delete this stock location?"
-msgstr ""
+msgstr "Bu stok konumunu silmek istediğinizden emin misiniz?"
 
 #: stock/templates/stock/navbar.html:11
 msgid "Stock Item Tracking"
@@ -5850,7 +5850,7 @@ msgstr ""
 
 #: stock/views.py:123
 msgid "Edit Stock Location"
-msgstr ""
+msgstr "Stok konumunu düzenle"
 
 #: stock/views.py:230 stock/views.py:1343 stock/views.py:1465
 #: stock/views.py:1830
@@ -5859,7 +5859,7 @@ msgstr ""
 
 #: stock/views.py:245
 msgid "Stock Location QR code"
-msgstr ""
+msgstr "Stok Konumu QR Kodu"
 
 #: stock/views.py:265
 msgid "Add Stock Item Attachment"
@@ -5887,7 +5887,7 @@ msgstr ""
 
 #: stock/views.py:385
 msgid "Specify a valid location"
-msgstr ""
+msgstr "Geçerli bir konum belirtiniz"
 
 #: stock/views.py:396
 msgid "Stock item returned from customer"
@@ -6045,7 +6045,7 @@ msgstr ""
 
 #: stock/views.py:1899
 msgid "Delete Stock Location"
-msgstr ""
+msgstr "Stok Konumunu Sil"
 
 #: stock/views.py:1912
 msgid "Delete Stock Item"
@@ -6145,7 +6145,7 @@ msgstr ""
 
 #: templates/InvenTree/search.html:271 templates/js/stock.js:308
 msgid "No stock location set"
-msgstr ""
+msgstr "Stok konumu ayarlanmadı"
 
 #: templates/InvenTree/settings/appearance.html:10
 msgid "Theme Settings"
@@ -6177,7 +6177,7 @@ msgstr ""
 
 #: templates/InvenTree/settings/category.html:9
 msgid "Category Settings"
-msgstr ""
+msgstr "Kategori Ayarları"
 
 #: templates/InvenTree/settings/category.html:25
 msgid "Category Parameter Templates"
@@ -6492,7 +6492,7 @@ msgstr ""
 
 #: templates/js/barcode.js:418
 msgid "Check Stock Items into Location"
-msgstr ""
+msgstr "Stok Kalemlerini bu konuma kaydet"
 
 #: templates/js/barcode.js:422 templates/js/barcode.js:547
 msgid "Check In"
@@ -6508,7 +6508,7 @@ msgstr ""
 
 #: templates/js/barcode.js:485
 msgid "Stock Item already in this location"
-msgstr ""
+msgstr "Stok kalemi zaten bu konumda"
 
 #: templates/js/barcode.js:492
 msgid "Added stock item"
@@ -6520,11 +6520,11 @@ msgstr ""
 
 #: templates/js/barcode.js:542
 msgid "Check Into Location"
-msgstr ""
+msgstr "Konuma Kaydet"
 
 #: templates/js/barcode.js:605
 msgid "Barcode does not match a valid location"
-msgstr ""
+msgstr "Barkod geçerli bir konumla eşleşmiyor"
 
 #: templates/js/bom.js:175 templates/js/build.js:1004
 msgid "Open subassembly"
@@ -6688,15 +6688,15 @@ msgstr ""
 
 #: templates/js/label.js:61
 msgid "Select Stock Locations"
-msgstr ""
+msgstr "Stok Konumu Seç"
 
 #: templates/js/label.js:62
 msgid "Stock location(s) must be selected before printing labels"
-msgstr ""
+msgstr "Etiket yazdırılmadan önce stok konumları seçilmeli"
 
 #: templates/js/label.js:80
 msgid "No labels found which match selected stock location(s)"
-msgstr ""
+msgstr "Seçili konumlarla eşleşen etiket bulunamadı"
 
 #: templates/js/label.js:154
 msgid "stock items selected"
@@ -6999,11 +6999,11 @@ msgstr ""
 
 #: templates/js/stock.js:474
 msgid "locations"
-msgstr ""
+msgstr "konumlar"
 
 #: templates/js/stock.js:476
 msgid "Undefined location"
-msgstr ""
+msgstr "Tanımsız konum"
 
 #: templates/js/stock.js:577
 msgid "Stock item is in production"
@@ -7075,7 +7075,7 @@ msgstr ""
 
 #: templates/js/stock.js:1044
 msgid "Location no longer exists"
-msgstr ""
+msgstr "Konum artık yok"
 
 #: templates/js/stock.js:1063
 msgid "Purchase order no longer exists"
@@ -7111,7 +7111,7 @@ msgstr ""
 
 #: templates/js/stock.js:1300
 msgid "Create New Location"
-msgstr ""
+msgstr "Yeni Konum Oluştur"
 
 #: templates/js/stock.js:1341
 msgid "No installed items"
@@ -7139,7 +7139,7 @@ msgstr "Çeşit Stokuna İzin Ver"
 
 #: templates/js/table_filters.js:76
 msgid "Include locations"
-msgstr ""
+msgstr "Konumları dahil et"
 
 #: templates/js/table_filters.js:86 templates/js/table_filters.js:87
 #: templates/js/table_filters.js:300
@@ -7197,7 +7197,7 @@ msgstr ""
 
 #: templates/js/table_filters.js:139
 msgid "Include stock in sublocations"
-msgstr ""
+msgstr "Alt konumlardaki stoku dahil et"
 
 #: templates/js/table_filters.js:144
 msgid "Show stock items which are depleted"
@@ -7261,11 +7261,11 @@ msgstr ""
 
 #: templates/js/table_filters.js:301
 msgid "Include parts in subcategories"
-msgstr ""
+msgstr "Alt kategorilerdeki parçaları dahil et"
 
 #: templates/js/table_filters.js:305
 msgid "Has IPN"
-msgstr ""
+msgstr "DPN Var"
 
 #: templates/js/table_filters.js:306
 msgid "Part has internal part number"
