--- a/InvenTree/locale/pl/LC_MESSAGES/django.po
+++ b/InvenTree/locale/pl/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-21 07:26+0000\n"
-"PO-Revision-Date: 2021-06-21 08:00\n"
+"PO-Revision-Date: 2021-06-21 19:13\n"
 "Last-Translator: \n"
 "Language-Team: Polish\n"
 "Language: pl_PL\n"
@@ -1865,7 +1865,7 @@ msgstr ""
 #: order/templates/order/po_navbar.html:22 order/views.py:582
 #: part/templates/part/bom_upload/upload_file.html:27
 msgid "Upload File"
-msgstr "Wyślik plik"
+msgstr "Wyślij plik"
 
 #: common/views.py:185 order/templates/order/order_wizard/match_fields.html:52
 #: order/views.py:583 part/templates/part/bom_upload/select_fields.html:58
