--- a/InvenTree/locale/de/LC_MESSAGES/django.po
+++ b/InvenTree/locale/de/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-03 02:06+0000\n"
-"PO-Revision-Date: 2021-07-01 22:38\n"
+"PO-Revision-Date: 2021-07-03 02:11\n"
 "Last-Translator: \n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -2242,11 +2242,9 @@ msgstr "Sind Sie sicher, dass Sie die Firma '%(name)s' löschen wollen?"
 
 #: company/templates/company/delete.html:12
 #, python-format
-msgid ""
-"There are %(count)s parts sourced from this company.<br>\n"
+msgid "There are %(count)s parts sourced from this company.<br>\n"
 "If this supplier is deleted, these supplier part entries will also be deleted."
-msgstr ""
-"Es gibt %(count)s Teile, die von diesem Unternehmen bezogen werden.<br>\n"
+msgstr "Es gibt %(count)s Teile, die von diesem Unternehmen bezogen werden.<br>\n"
 "Wenn dieser Lieferant gelöscht wird, werden auch diese Zulieferer-Teile gelöscht."
 
 #: company/templates/company/detail.html:21
@@ -6331,13 +6329,11 @@ msgstr "Farbschemata"
 
 #: templates/InvenTree/settings/appearance.html:29
 #, python-format
-msgid ""
-"\n"
+msgid "\n"
 "        The CSS sheet \"%(invalid_color_theme)s.css\" for the currently selected color theme was not found.<br>\n"
 "        Please select another color theme :)\n"
 "    "
-msgstr ""
-"\n"
+msgstr "\n"
 "\t\tDie CSS Datei \"%(invalid_color_theme)s.css\" für das aktuell ausgewählte Farbschema wurde nicht gefunden.<br>\n"
 "\t\tBitte ein anderes Farbschema auswählen:)\n"
 "\t    "
@@ -7467,16 +7463,12 @@ msgid "Stock status"
 msgstr "Status"
 
 #: templates/js/table_filters.js:211
-#, fuzzy
-#| msgid "Unit purchase price"
 msgid "Has purchase price"
-msgstr "Preis pro Einheit"
+msgstr ""
 
 #: templates/js/table_filters.js:212
-#, fuzzy
-#| msgid "Show stock items which have expired"
 msgid "Show stock items which have a purchase price set"
-msgstr "Zeige abgelaufene BestandsObjekte"
+msgstr ""
 
 #: templates/js/table_filters.js:241
 msgid "Build status"
@@ -7842,3 +7834,4 @@ msgstr "Berechtigungen Einträge zu ändern"
 #: users/models.py:191
 msgid "Permission to delete items"
 msgstr "Berechtigung Einträge zu löschen"
+
